// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Inline> doesn't write falsy css callback 1`] = `<DocumentFragment />`;

exports[`<Inline> writes css 1`] = `
<DocumentFragment>
  <style>
    
            display: block;
          
  </style>
</DocumentFragment>
`;

exports[`<Inline> writes css callback 1`] = `
<DocumentFragment>
  <style>
    color: var(--color-primary);
  </style>
</DocumentFragment>
`;

exports[`<Inline> writes css object 1`] = `
<DocumentFragment>
  <style>
    display:block;
  </style>
</DocumentFragment>
`;

exports[`<Inline> writes css w/ nonce 1`] = `
<DocumentFragment>
  <style
    nonce="E8gagwlWEGlgwel"
  >
    
            display: block;
          
  </style>
</DocumentFragment>
`;

exports[`useGlobal() sets global styles with a function value: global 1`] = `"body {background: var(--color-primary);}"`;

exports[`useGlobal() sets global styles with a function value: tokens 1`] = `":root {--color-primary: #000; --color-secondary: #fff;}"`;

exports[`useGlobal() sets global styles with a string value: :root 1`] = `":root {--blue: #09a;}"`;

exports[`useThemes() adds tokens then cleans up 1`] = `".ui-dark-theme {--color-primary: #000; --color-secondary: #fff;}"`;

exports[`useThemes() adds tokens then cleans up 2`] = `".ui-light-theme {--color-primary: #fff; --color-secondary: #000;}"`;

exports[`useTokens() adds tokens then cleans up: :root 1`] = `":root {--color-primary: #000; --color-secondary: #fff;}"`;
